adicionado menu arrastado para os projetos e arrumei alguns problemas com o display grid da página // próximos serão: desenvolver a parte de linguagens, aumentar o bg do id suBody e desenvolver a versão desktop

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         <section id="projetos" >
             <h2 class="titulo"> Estes são meus projetos! </h2>
             <div id="lista" class="bloco">
-                <span id="filtro__projetos" class="alinhados">
-                    <a href="#" class="link-text filtro__item">
-                        <p class="filtro__item selecionado"> Todos </p>
+                <span id="filtro__projetos">
+                    <a href="#" class="link-text filtro__item selecionado">
+                        <p> Todos </p>
                     </a>
                     <a href="#" class="link-text filtro__item">
-                        <p class="filtro__item"> Frontend </p>
+                        <p> Frontend </p>
                     </a>
                     <a href="#" class="link-text filtro__item">
-                        <p class="filtro__item"> API </p>
+                        <p> API </p>
                     </a>
                 </span>
                 <span id="lista__projetos">
