--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <link rel="stylesheet" href="css/sobre-mim.css">
     <link rel="stylesheet" href="css/projetos.css">
     <link rel="stylesheet" href="css/ferramentas.css">
+    <link rel="stylesheet" href="css/card-mostra.css">
     <script src="js/script.js"></script>
     <title>Portfolio Fabio da Silva</title>
 </head>
 <body>
-    <div id="suBody">
+    <div id="suBody" >
         <nav id="navegacao">
             <span title="Idioma">
                 <a href="#" class="link-text navegacao__item">
                     <p class="fa fa-globe fa-lg"></p>
                 </a>
             </span>
-            <!-- TODO: Adicionar preview do menu a partir do hover do usuário -->
+            <!-- TODO: Adicionar preview do menu, idioma e tema a partir do hover do usuário -->
             <span title="Menu"> 
                 <a href="#" class="link-text navegacao__item--menu">
                     <p class="fa fa-bars fa-lg"></p>
@@ -38,8 +39,9 @@
             <div class="bloco">
                 <a class="link-text" href="https://www.linkedin.com/in/fabiodasilvaramalho/" target="_blank">
                     <img id="foto-perfil" src="https://media.licdn.com/dms/image/D4D03AQHv1psCsqrJeQ/profile-displayphoto-shrink_200_200/0/1697245450846?e=2147483647&v=beta&t=fpA9hbVnMYFwm5yF6X0LxomjxdMaa8w-dC1mN9x6cdk" alt="foto">
-                </a> 
-                <p>Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desenvolvimento de sistemas e me especializando em frontend com outros cursos </p>
+                </a>
+                <p>Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desen... <a href="#">Ler mais</a></p> 
+                <!-- <p>Olá, me chamo Fábio, tenho 19 anos e gosto muito de resolver problemas de tecnologia. Estou cursando análise e desenvolvimento de sistemas e me especializando em frontend com outros cursos </p> -->
             </div>
         </section>
         <section id="projetos" >
@@ -59,22 +61,33 @@
                 <span id="lista__projetos">
                     <a href="#" class="link-text">
                         <div class="lista__projetos--item">
-                            <img src="https://img.freepik.com/fotos-gratis/papel-de-parede-abstrato-ultra-detalhado-da-nebulosa-4_1562-749.jpg" alt="Projeto onde é apresentado um site de notícias">
+                            <img src="assets/projetos/spotifyImersao.png" alt="Projeto onde é apresentado um site de notícias">
                             <span>
                                 <div>
-                                    <h3 class="lista__item--titulo"> Site de receitas </h3>
-                                    <p>Desafio de projeto realizado durante o curso de Análise e desenvolvi...</p>
+                                    <h3 class="lista__item--titulo"> Clone Spotify </h3>
+                                    <p> Proposta realizada durante a Imersão Frontend da Alura, est...</p>
                                 </div>
                             </span>
                         </div>
                     </a>
                     <a href="#" class="link-text">
                         <div class="lista__projetos--item">
-                            <img src="https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg?w=740&t=st=1707962538~exp=1707963138~hmac=27f5d43cc9e565f9a1e5f288e92872abd54ea06b45dd7191b9197dc1f9e75c51" alt="Projeto onde é apresentado um site de notícias">
+                            <img src="assets/projetos/receitarcozinhar.png" alt="Projeto onde é apresentado um site de notícias">
                             <span>
                                 <div>
-                                    <h3 class="lista__item--titulo"> Clone Spotify </h3>
-                                    <p>Neste desafio pude desenvolver uma aplicação web pareci...</p>
+                                    <h3 class="lista__item--titulo"> Site de receitas </h3>
+                                    <p>Desafio de projeto realizado durante o curso de Anális...</p>
+                                </div>
+                            </span>
+                        </div>
+                    </a>
+                    <a href="#" class="link-text">
+                        <div class="lista__projetos--item">
+                            <img src="assets/projetos/calculadora.png" alt="projeto calculadora">
+                            <span>
+                                <div>
+                                    <h3 class="lista__item--titulo"> Calculadora funcional </h3>
+                                    <p> Desenvolvido a partir de uma landing page produzi...</p>
                                 </div>
                             </span>
                         </div>
@@ -92,13 +105,17 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="logo-javascript">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="logo-git">
                     <!-- TODO: adicionar svgs ao invés de imgs // devicon -->
-                    <svg viewBox="0 0 128 128">
-                        <g fill="#afaff"><path fill-rule="evenodd" clip-rule="evenodd" d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z"></path><path d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0"></path></g>
-                        </svg>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="logo do github">
                 </span>
             </div>
         </section>
     </div>
+    <!-- TODO: Card para mostrar infos, ele vai ser funcionar assim que eu add o js script pra isso -->
+    <!-- <div id="cardsSobTela">
+        <div class="card-mostra">
+            asdasd
+        </div>
+    </div> -->
     <footer>
         <h4 id="footer__titulo">Entre em contato comigo!</h4>
         <span>
