mudança de projeto calculadora por projeto 7 days of code

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                     </a>
                     <a href="#cardProjetoTres" class="link-text itemProjeto">
                         <div class="lista__projetos--item">
-                            <img src="assets/projetos/calculadora.png" alt="projeto calculadora">
+                            <img src="assets/projetos/projeto7daysofcode.jpeg" alt="projeto calculadora">
                             <span>
                                 <div>
-                                    <h3 class="lista__item--titulo"> Calculadora funcional </h3>
-                                    <p> Desenvolvido a partir de uma landing page produzi...</p>
+                                    <h3 class="lista__item--titulo"> Landing page </h3>
+                                    <p> Desenvolvido a partir de desafi...</p>
                                 </div>
                             </span>
                         </div>
@@ -183,7 +183,7 @@
                 <p class="fa fa-times fa-lg"></p>
             </div>
             <span>
-                <img src="assets/projetos/spotifyImersao.png" alt="Foto de perfil do Linkedin de Fábio da Silva">
+                <img src="assets/projetos/spotifyImersao.png" alt="Projeto spotify">
             </span>
             <h4 class="cardsSobTela__title"> Clone Spotify </h4>
         <span>
@@ -207,15 +207,15 @@
                 <p class="fa fa-times fa-lg"></p>
             </div>
             <span>
-                <img src="assets/projetos/receitarcozinhar.png" alt="Foto de perfil do Linkedin de Fábio da Silva">
+                <img src="assets/projetos/receitarcozinhar.png" alt="Projeto site de receitas">
             </span>
             <h4 class="cardsSobTela__title"> Receitar e Cozinhar </h4>
             <span>
-                <p>Desafio de projeto realizado durante o curso de Anális...</p>
+                <p>Projeto de faculdade feito no 1º semestre de Análise e desenvolvimento de sistemas, onde utilizei as habilidades aprendidas em HTML5 e CSS3 para montar o esqueleto das 4 páginas em que ele consiste e poder estiliza-las foi desafiador. Um dos meus primeiros projetos e gostei muito da experiência pois, houveram problemas que me pediram certo tempo de pesquisa mas no final ficou do jeito que esperava.</p>
             </span>
             <div class="links__projetos">
                 <a href="#">Acessar Projeto</a>
-                <a href="#">Ver Repositório</a>
+                <a href="https://github.com/fabioDev21/Site-Receitas/" target="_blank">Ver Repositório</a>
             </div>
         <script>
             let closeBtnProjetoDois = document.getElementsByClassName("closeBtn")[4]
@@ -231,15 +231,16 @@
                 <p class="fa fa-times fa-lg"></p>
             </div>
             <span>
-                <img src="assets/projetos/calculadora.png" alt="Foto de perfil do Linkedin de Fábio da Silva">
+                <img src="assets/projetos/projeto7daysofcode.jpeg" alt="Projeto landing page 7 days of code">
             </span>
-                <h4 class="cardsSobTela__title"> Calculadora funcional </h4>
+                <h4 class="cardsSobTela__title"> Landing page </h4>
             <span>
-                <p>Desenvolvido a partir de uma landing page produzi...</p>
+                <p>Projeto de landing page desenvolvida durante 7 dias assim como o desafio propôs, aqui surgiram desafios onde o conteúdo disponibilizado para ajuda me fez plantar sementes e colher frutos muito rápido, foi nele que aprendi o display grid, responsividade, váriaves no CSS, dentre muitas outras coisas, para mim sem dúvidas um ótimo projeto. Segue abaixo imagens do mesmo já concluído.</p>
             </span>
             <div class="links__projetos">
                 <a href="#">Acessar Projeto</a>
-                <a href="#">Ver Repositório</a>
+                <a href="https://github.com/fabioDev21/7DaysOfCodeByGiMoller"
+                target="_blank">Ver Repositório</a>
             </div>
         <script>
             let closeBtnProjetoTres = document.getElementsByClassName("closeBtn")[5]
