--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <p>Proposta realizada durante a Imersão Frontend da Alura, est...</p>
         </span>
         <div class="links__projetos">
-            <a href="#">Acessar Projeto</a>
+            <a href="https://projetoimersaofrontendalura.vercel.app/" target="_blank">Acessar Projeto</a>
             <a href="https://github.com/fabioDev21/ImersaoFrontendAlura.git" target="_blank">Ver Repositório</a>
         </div>
         <script>
@@ -214,7 +214,8 @@
                 <p>Projeto de faculdade feito no 1º semestre de Análise e desenvolvimento de sistemas, onde utilizei as habilidades aprendidas em HTML5 e CSS3 para montar o esqueleto das 4 páginas em que ele consiste e poder estiliza-las foi desafiador. Um dos meus primeiros projetos e gostei muito da experiência pois, houveram problemas que me pediram certo tempo de pesquisa mas no final ficou do jeito que esperava.</p>
             </span>
             <div class="links__projetos">
-                <a href="#">Acessar Projeto</a>
+                <a href="https://projeto-faculdade-receitar-cozinhar.vercel.app/
+                " target="_blank">Acessar Projeto</a>
                 <a href="https://github.com/fabioDev21/Site-Receitas/" target="_blank">Ver Repositório</a>
             </div>
         <script>
@@ -238,7 +239,7 @@
                 <p>Projeto de landing page desenvolvida durante 7 dias assim como o desafio propôs, aqui surgiram desafios onde o conteúdo disponibilizado para ajuda me fez plantar sementes e colher frutos muito rápido, foi nele que aprendi o display grid, responsividade, váriaves no CSS, dentre muitas outras coisas, para mim sem dúvidas um ótimo projeto. Segue abaixo imagens do mesmo já concluído.</p>
             </span>
             <div class="links__projetos">
-                <a href="#">Acessar Projeto</a>
+                <a href="https://desafio-seven-days-of-code.vercel.app" target="_blank">Acessar Projeto</a>
                 <a href="https://github.com/fabioDev21/7DaysOfCodeByGiMoller"
                 target="_blank">Ver Repositório</a>
             </div>
