adicionando troca de modos de cor e planejamento pra essa função no futuro

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </a>
             </span>
             <span id="sunMode" title="Ativar modo claro">
-                <a href="" class="link-text navegacao__item">
+                <a href="#" class="link-text navegacao__item">
                     <p class="fa fa-sun-o fa-lg"></p>
                 </a>
             </span>
